--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,6 @@
 <h1>About Me</h1>
 <p>Hadizo its Me</p>
 
-<p>its not important to know somthing about me</p>
+<p>It's not important that you know anything about me.</p>
 
-<p>yes</p>
+<p>Fk Off</p>
