Add subtitle to contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -1,4 +1,5 @@
 <h1>Contact Me</h1>
+<h2>Everything here its just a test :)</h2>
 <p>Tel: +123456789</p>
 <p>Email: me@gmail.com</p>
 <p>Address:</p>
